# tsplat

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: forward_pass.rs
docs/agents/handoff/: 2026-04-10-001-tsplat-mvp-initial-build.md  2026-04-10-002-ply-parser-memory-fix.md  2026-04-10-003-hud-control-panel.md  2026-04-10-004-y-flip-wasd-mouse-hud.md  2026-04-10-005-bench-test-framework.md  2026-04-10-006-forward-pass-optimization.md  2026-04-10-007-camera-relative-pan-orbit.md  2026-04-10-008-kitty-graphics-hires-backend.md  2026-04-10-009-kitty-probe-z-order-hud.md  2026-04-11-001-dirty-frame-kitty-transitions.md  2026-04-11-002-camera-controls-hud-default-speeds.md  2026-04-11-003-forward-pass-bench-claude-md.md  2026-04-13-001-auto-orbit-o-key.md
docs/plan/: plan.md
scripts/: download-garden-ply.sh
src/: camera.rs  display.rs  framebuffer.rs  hud.rs  lib.rs  main.rs  rasterize.rs  sh.rs  splat.rs
tests/: regression.rs
