[package]
name = "tsplat"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Terminal-based 3D Gaussian Splatting renderer (CPU, half-block or Kitty graphics)"
readme = "README.md"
license = "MIT"
repository = "https://github.com/darshanmakwana412/tsplat"
keywords = ["gaussian-splatting", "terminal", "ansi", "3dgs", "renderer"]
categories = ["command-line-utilities", "graphics"]

[dependencies]
glam = "0.29"
crossterm = "0.28"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "forward_pass"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
